--- a/angular/src/app/main/danh-muc-chung/agent-thinking-log/modals/create-update/create-update-agent-thinking-log-modal.component.html
+++ b/angular/src/app/main/danh-muc-chung/agent-thinking-log/modals/create-update/create-update-agent-thinking-log-modal.component.html
@@ -1,28 +1,82 @@
 <ng-container *ngIf="inline">
-  <app-toggleable-card title="Thông tin cơ bản">
+  <app-toggleable-card [title]="modalTitle || 'Thông tin Agent Thinking Log'">
     <div class="card-body">
-      <form [formGroup]="form" class="p-fluid"
-        (ngSubmit)="!readOnly && (updateAIModelConfigDto?.id ? save() : saveAndNew())">
+      <form [formGroup]="form" class="p-fluid" (ngSubmit)="readOnly ? null : save()">
         <div class="row">
-          <div class="col-4 form-group">
-            <label for="providerName">{{ 'Tên nhà cung cấp' }} <span class="text-danger">*</span></label>
-            <input pInputText type="text" placeholder="Nhập tên nhà cung cấp" id="providerName"
-              formControlName="providerName" class="w-100" />
+          <div class="col-6 form-group">
+            <label for="messageId">Message ID <span class="text-danger">*</span></label>
+            <input
+              pInputText
+              type="number"
+              id="messageId"
+              formControlName="messageId"
+              class="w-100"
+              [placeholder]="'Nhập Message ID'"
+            />
           </div>
-          <div class="col-4 form-group">
-            <label for="modelName">{{ 'Tên mô hình' }} <span class="text-danger">*</span></label>
-            <input pInputText type="text" placeholder="Nhập tên mô hình" id="modelName"
-              formControlName="modelName" class="w-100" />
-            
+          <div class="col-6 form-group">
+            <label for="durationMs">Duration (ms) <span class="text-danger">*</span></label>
+            <input
+              pInputText
+              type="number"
+              id="durationMs"
+              formControlName="durationMs"
+              class="w-100"
+              [placeholder]="'Nhập thời gian thực thi'"
+            />
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-6 form-group">
+            <label for="agentName">Agent</label>
+            <input
+              pInputText
+              type="text"
+              id="agentName"
+              formControlName="agentName"
+              class="w-100"
+              placeholder="Nhập tên agent"
+            />
+          </div>
+          <div class="col-6 form-group">
+            <label for="stepName">Step</label>
+            <input
+              pInputText
+              type="text"
+              id="stepName"
+              formControlName="stepName"
+              class="w-100"
+              placeholder="Nhập tên step"
+            />
+          </div>
+        </div>
 
         <div class="row">
           <div class="col-12 form-group">
-            <label for="description">{{ 'Mô tả' }}</label>
-            <textarea pInputTextarea id="description" rows="3" viPlaceholderIfHasValue [viPlaceholderActive]="readOnly"  placeholder="Nhập mô tả" formControlName="description"
-              class="form-control"></textarea>
+            <label for="inputData">Input</label>
+            <textarea
+              pInputTextarea
+              id="inputData"
+              rows="3"
+              placeholder="Chi tiết dữ liệu đầu vào"
+              formControlName="inputData"
+              class="form-control"
+            ></textarea>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 form-group">
+            <label for="outputData">Output</label>
+            <textarea
+              pInputTextarea
+              id="outputData"
+              rows="3"
+              placeholder="Chi tiết dữ liệu đầu ra"
+              formControlName="outputData"
+              class="form-control"
+            ></textarea>
           </div>
         </div>
       </form>
@@ -30,30 +84,29 @@
     <div class="card-fotter d-flex justify-content-between align-items-center" style="padding: 10px">
       <div></div>
       <div class="d-flex gap-2">
-          <vt-button
-            type="button"
-            [label]="readOnly ? 'Đóng' : 'Hủy'"
-            [color]="readOnly ? 'danger' : 'danger'"
-            [outline]="true"
-            [width]="112"
-            [height]="36"
-            (buttonClick)="close()"
-          >
-            <i class="pi pi-times"></i>
-          </vt-button>
-          <vt-button
-            *ngIf="!readOnly"
-            type="button"
-            [disabled]="form?.invalid || form?.pending"
-            [label]="(updateAIModelConfigDto?.id ? 'Cập nhật' : 'Thêm mới')"
-            [color]="'custom'"
-            [width]="112"
-            [height]="36"
-            (buttonClick)="form?.invalid || form?.pending ? null : save()"
-          >
-            <i class="pi pi-check"></i>
-          </vt-button>
-
+        <vt-button
+          type="button"
+          [label]="readOnly ? 'Đóng' : 'Hủy'"
+          [color]="'danger'"
+          [outline]="true"
+          [width]="112"
+          [height]="36"
+          (buttonClick)="close()"
+        >
+          <i class="pi pi-times"></i>
+        </vt-button>
+        <vt-button
+          *ngIf="!readOnly"
+          type="button"
+          [disabled]="form?.invalid || form?.pending"
+          [label]="updateAgentThinkingLogDto?.id ? 'Cập nhật' : 'Thêm mới'"
+          [color]="'custom'"
+          [width]="112"
+          [height]="36"
+          (buttonClick)="form?.invalid || form?.pending ? null : save()"
+        >
+          <i class="pi pi-check"></i>
+        </vt-button>
       </div>
     </div>
   </app-toggleable-card>
