--- a/angular/src/app/main/danh-muc-chung/job-application/modals/create-update/create-update-job-application-modal.component.html
+++ b/angular/src/app/main/danh-muc-chung/job-application/modals/create-update/create-update-job-application-modal.component.html
@@ -1,28 +1,89 @@
 <ng-container *ngIf="inline">
-  <app-toggleable-card title="Thông tin cơ bản">
+  <app-toggleable-card title="Thông tin đơn ứng tuyển">
     <div class="card-body">
-      <form [formGroup]="form" class="p-fluid"
-        (ngSubmit)="!readOnly && (updateAIModelConfigDto?.id ? save() : saveAndNew())">
+      <form
+        [formGroup]="form"
+        class="p-fluid"
+        (ngSubmit)="!readOnly && (updateJobApplicationDto?.id ? save() : saveAndNew())"
+      >
         <div class="row">
-          <div class="col-4 form-group">
-            <label for="providerName">{{ 'Tên nhà cung cấp' }} <span class="text-danger">*</span></label>
-            <input pInputText type="text" placeholder="Nhập tên nhà cung cấp" id="providerName"
-              formControlName="providerName" class="w-100" />
+          <div class="col-6 form-group">
+            <label for="jobId">ID công việc <span class="text-danger">*</span></label>
+            <input
+              pInputText
+              type="number"
+              min="0"
+              id="jobId"
+              placeholder="Nhập ID công việc"
+              formControlName="jobId"
+              class="w-100"
+            />
           </div>
-          <div class="col-4 form-group">
-            <label for="modelName">{{ 'Tên mô hình' }} <span class="text-danger">*</span></label>
-            <input pInputText type="text" placeholder="Nhập tên mô hình" id="modelName"
-              formControlName="modelName" class="w-100" />
-            
+          <div class="col-6 form-group">
+            <label for="candidateProfileId">ID hồ sơ ứng viên <span class="text-danger">*</span></label>
+            <input
+              pInputText
+              type="number"
+              min="0"
+              id="candidateProfileId"
+              placeholder="Nhập ID ứng viên"
+              formControlName="candidateProfileId"
+              class="w-100"
+            />
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-12 form-group">
+            <label for="coverLetter">Thư xin việc</label>
+            <textarea
+              pInputTextarea
+              id="coverLetter"
+              rows="4"
+              placeholder="Nhập thư xin việc"
+              formControlName="coverLetter"
+              class="form-control"
+            ></textarea>
+          </div>
+        </div>
 
         <div class="row">
           <div class="col-12 form-group">
-            <label for="description">{{ 'Mô tả' }}</label>
-            <textarea pInputTextarea id="description" rows="3" viPlaceholderIfHasValue [viPlaceholderActive]="readOnly"  placeholder="Nhập mô tả" formControlName="description"
-              class="form-control"></textarea>
+            <label for="profileSnapshotJson">Thông tin hồ sơ (JSON)</label>
+            <textarea
+              pInputTextarea
+              id="profileSnapshotJson"
+              rows="4"
+              placeholder="Nhập dữ liệu hồ sơ (JSON)"
+              formControlName="profileSnapshotJson"
+              class="form-control"
+            ></textarea>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-4 form-group">
+            <label for="status">Trạng thái <span class="text-danger">*</span></label>
+            <p-dropdown
+              id="status"
+              [options]="statusOptions"
+              optionLabel="label"
+              optionValue="value"
+              formControlName="status"
+              class="w-100"
+            ></p-dropdown>
+          </div>
+          <div class="col-4 form-group">
+            <label for="aiMatchingScore">Điểm AI</label>
+            <input
+              pInputText
+              type="number"
+              step="0.01"
+              id="aiMatchingScore"
+              placeholder="Nhập số điểm"
+              formControlName="aiMatchingScore"
+              class="w-100"
+            />
           </div>
         </div>
       </form>
@@ -30,30 +91,29 @@
     <div class="card-fotter d-flex justify-content-between align-items-center" style="padding: 10px">
       <div></div>
       <div class="d-flex gap-2">
-          <vt-button
-            type="button"
-            [label]="readOnly ? 'Đóng' : 'Hủy'"
-            [color]="readOnly ? 'danger' : 'danger'"
-            [outline]="true"
-            [width]="112"
-            [height]="36"
-            (buttonClick)="close()"
-          >
-            <i class="pi pi-times"></i>
-          </vt-button>
-          <vt-button
-            *ngIf="!readOnly"
-            type="button"
-            [disabled]="form?.invalid || form?.pending"
-            [label]="(updateAIModelConfigDto?.id ? 'Cập nhật' : 'Thêm mới')"
-            [color]="'custom'"
-            [width]="112"
-            [height]="36"
-            (buttonClick)="form?.invalid || form?.pending ? null : save()"
-          >
-            <i class="pi pi-check"></i>
-          </vt-button>
-
+        <vt-button
+          type="button"
+          [label]="readOnly ? 'Đóng' : 'Hủy'"
+          [color]="readOnly ? 'danger' : 'danger'"
+          [outline]="true"
+          [width]="112"
+          [height]="36"
+          (buttonClick)="close()"
+        >
+          <i class="pi pi-times"></i>
+        </vt-button>
+        <vt-button
+          *ngIf="!readOnly"
+          type="button"
+          [disabled]="form?.invalid || form?.pending"
+          [label]="(updateJobApplicationDto?.id ? 'Cập nhật' : 'Thêm mới')"
+          [color]="'custom'"
+          [width]="112"
+          [height]="36"
+          (buttonClick)="form?.invalid || form?.pending ? null : save()"
+        >
+          <i class="pi pi-check"></i>
+        </vt-button>
       </div>
     </div>
   </app-toggleable-card>
