--- a/angular/src/app/main/danh-muc-chung/ai-prompt-template/ai-prompt-template.component.html
+++ b/angular/src/app/main/danh-muc-chung/ai-prompt-template/ai-prompt-template.component.html
@@ -1,25 +1,19 @@
-<!-- <app-page-header
-  [title]="'::DanhMucs' | abpLocalization"
-  (titleClick)="onHeaderTitleClick()"
->
-  <div class="d-flex" *ngIf="viewMode === 'list'">
-    <vt-button
-      type="button"
-      [label]="'::CreateNew' | abpLocalization"
-      [color]="'custom'"
-      [width]="112"
-      [height]="36"
-      breadcrumbMode="create"
-      breadcrumbEntity="mô hình AI" 
-      [breadcrumb]="true"
-      (buttonClick)="startCreate()"
-    ></vt-button>
-  </div>
-  <p-menu #excelMenu [popup]="true" [model]="excelMenuItems" />
-</app-page-header> -->
+<div class="d-flex" *ngIf="viewMode === 'list'">
+  <vt-button
+    type="button"
+    [label]="'::CreateNew' | abpLocalization"
+    [color]="'custom'"
+    [width]="112"
+    [height]="36"
+    breadcrumbMode="create"
+    breadcrumbEntity="tin tuyển dụng" 
+    [breadcrumb]="true"
+    (buttonClick)="startCreate()"
+  ></vt-button>
+</div>
 
 <div class="page">
-  <app-create-update-ai-model-config-modal
+  <app-create-update-ai-prompt-template-modal
     *ngIf="viewMode !== 'list'"
     #inlineCreateUpdate
     [inline]="true"
@@ -28,7 +22,7 @@
     [readOnly]="viewMode === 'view'"
     (saved)="onChildSaved($event)"
     (canceled)="onChildCanceled()"
-  ></app-create-update-ai-model-config-modal>
+  ></app-create-update-ai-prompt-template-modal>
   <!-- Advanced filter template -->
   <ng-template #advancedFilter>
     <div class="row">
