--- a/angular/src/app/main/danh-muc-chung/job-application/modals/create-update/create-update-job-application-modal.component.less
+++ b/angular/src/app/main/danh-muc-chung/job-application/modals/create-update/create-update-job-application-modal.component.less
@@ -122,4 +122,18 @@
       .techs { font-size: 0.85rem; color: #2563eb; font-weight: 500; }
     }
   }
+
+  ::ng-deep .p-select {
+    width: 100%;
+    border-radius: 6px;
+  }
+
+  .score-badge {
+      background: #2563eb;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-weight: bold;
+      display: inline-block;
+  }
 }
