--- a/angular/src/app/main/danh-muc-chung/ai-prompt-template/ai-prompt-template.component.html
+++ b/angular/src/app/main/danh-muc-chung/ai-prompt-template/ai-prompt-template.component.html
@@ -18,7 +18,7 @@
     #inlineCreateUpdate
     [inline]="true"
     [modalTitle]="formTitle"
-      [updateAIModelConfigDto]="updateAIModelConfigDto"
+    [updateAiPromptTemplateDto]="updateAiPromptTemplateDto"
     [readOnly]="viewMode === 'view'"
     (saved)="onChildSaved($event)"
     (canceled)="onChildCanceled()"
